# blcc

./: .dockerignore  .gitignore  .gitlab-ci.yml  Dockerfile  FEMPEnergy.xml  FederalFinanced.xml  MilconECIP.xml  MilconNon-Energy.xml  OMBNon-Energy.xml  README.md  default.nix  docker-compose.yml  flake.nix  gitlab-dockerfile  package.json  portainer-stack.yml  setup-frontend-env.sh
BLCC 5.3 Reports/: BLCC Cash Flow Report.html  BLCC Detailed LCC Report.html  BLCC ECIP Report.html  BLCC Input Report.html  BLCC Summary LCC Report.html
backend/: Cargo.toml  build.sh  default.nix  flake.nix
backend/api_tests/BLCC Backend/: Discount Rates.bru  E3 Request.bru  Emissions.bru  Energy Price Indices.bru  Energy Prices.bru  Escalation Rates No Sector.bru  Escalation Rates.bru  Region Case BA.bru  Region Case Oil.bru  Region Case Propane LNG.bru  Region Case Reeds.bru  Region Natgas.bru  SCC.bru  States.bru  Zip Info.bru  Zipcodes.bru  bruno.json
backend/api_tests/BLCC Backend/Escalation Rates/: Escalation Rates lowZTC.bru  Escalation Rates.bru  US Average.bru
backend/api_tests/BLCC Backend/Release Year/: Release Year Exists False.bru  Release Year Exists True.bru  Release Years.bru
backend/migrations/2024-01-08-202240_zip_state/: down.sql  up.sql
backend/migrations/2024-01-10-175154_escalation_rates/: down.sql  up.sql
backend/migrations/2024-03-05-145528_region-case-ba/: down.sql  up.sql
backend/migrations/2024-03-08-180044_zip-fuel-region/: down.sql  up.sql
backend/migrations/2024-03-14-165745_scc/: down.sql  up.sql
backend/migrations/2024-04-22-171222_division/: down.sql  up.sql
backend/migrations/2024-06-07-184234_add-reed/: down.sql  up.sql
backend/migrations/2024-06-11-140527_energy-prices/: down.sql  up.sql
backend/migrations/2024-06-11-141102_region-natgas/: down.sql  up.sql
backend/migrations/2024-06-11-141611_region_case_oil/: down.sql  up.sql
backend/migrations/2024-06-11-142330_region-case-propane-lng/: down.sql  up.sql
backend/migrations/2024-06-11-142701_region_case_reeds/: down.sql  up.sql
backend/migrations/2024-06-11-143453_energy_price_indices/: down.sql  up.sql
backend/migrations/2024-08-06-192128_discount_rates/: down.sql  up.sql
backend/migrations/2024-09-12-162419_add_coal/: down.sql  up.sql
backend/migrations/2024-09-12-164004_add_ref_to_primary_key/: down.sql  up.sql
backend/migrations/2025-01-21-123337_remove_scc_two_and_a_half_percent/: down.sql  up.sql
backend/migrations/2025-02-26-203005_change_escalation_rate_primary_key/: down.sql  up.sql
backend/public/: index.html
backend/src/: api.rs  main.rs  models.rs  paginated.rs  schema.rs
database/: Dockerfile
docs/: BLCC Pages and Components.docx  (+2 more)
(+344 files in other folders)
