[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
actix-web = { version = "4.9.0", features = ["rustls"] }
actix-files = "0.6.6"
actix-cors = "0.7.0"
env_logger = "0.11.5"
diesel = { version = "2.2.2", features = ["postgres", "r2d2"] }
diesel_migrations = "2.2.0"
dotenvy = "0.15.7"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.132"
r2d2 = "0.8.10"
#openssl = { version = "0.10.66" }
postgres = "0.19.9"
reqwest = { version = "0.12.9" , default-features = false, features = ["rustls-tls", "charset", "rustls-tls-native-roots"]}
rustls = "0.23.16"
